@@ -1,8 +1,8 @@
 package graph.jena.examples;
 
 import graph.jena.datatypes.JenaOperandWrapper;
-import graph.jena.operatorsimpl.r2r.BinaryR2RJenaImpl;
-import graph.jena.operatorsimpl.r2r.UnaryR2RJenaImpl;
+import graph.jena.operatorsimpl.r2r.jena.FullQueryBinaryJena;
+import graph.jena.operatorsimpl.r2r.jena.FullQueryUnaryJena;
 import graph.jena.stream.JenaBindingStream;
 import graph.jena.stream.JenaStreamGenerator;
 import graph.jena.sds.SDSJena;
@@ -120,9 +120,9 @@ public class polyflowExample_twoS2R {
         s2r_names.add(s2rOp_one.getName());
         s2r_names.add(s2rOp_two.getName());
 
-        RelationToRelationOperator<JenaOperandWrapper> r2rOp1 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_one.getName()), "partial_1");
-        RelationToRelationOperator<JenaOperandWrapper> r2rOp2 = new UnaryR2RJenaImpl("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_two.getName()), "partial_2");
-        RelationToRelationOperator<JenaOperandWrapper> r2rBinaryOp = new BinaryR2RJenaImpl("", List.of("partial_1", "partial_2"), "partial_3");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp1 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_one.getName()), "partial_1");
+        RelationToRelationOperator<JenaOperandWrapper> r2rOp2 = new FullQueryUnaryJena("SELECT * WHERE {GRAPH ?g{?s ?p ?o }}", Collections.singletonList(s2rOp_two.getName()), "partial_2");
+        RelationToRelationOperator<JenaOperandWrapper> r2rBinaryOp = new FullQueryBinaryJena("", List.of("partial_1", "partial_2"), "partial_3");
 
 
         RelationToStreamOperator<JenaOperandWrapper, Binding> r2sOp = new RelationToStreamOpImpl();
